<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_outlet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cl_root_add_outlet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    style="@style/Toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:subtitleTextColor="@color/white"
                    app:title="@string/title"
                    android:background="@color/red_dark"
                    app:titleTextAppearance="@style/Toolbar.TitleText"
                    app:titleTextColor="@color/white" >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:text="Advance System"
                                android:textColor="#fff"
                                android:textSize="30dp"
                                android:textStyle="bold" />
                            <TextView
                                android:id="@+id/txt_title_add_outlet"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/title_add_outlet"
                                android:textColor="#fff"
                                android:textSize="22dp"
                                android:textStyle="bold|italic" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.AppBarLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ScrollView
                    android:id="@+id/view_content"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_margin="7dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@color/red_logo"
                            android:text="@string/txt_store_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <EditText
                            android:id="@+id/edt_name_store"
                            android:layout_margin="7dp"
                            android:paddingLeft="5dp"
                            android:hint="@string/txt_store_name"
                            android:inputType="text"
                            android:maxLines="1"
                            android:background="@drawable/rounded_edittext"
                            android:nextFocusDown="@id/spn_store_type"
                            android:layout_width="match_parent"
                            android:layout_height="38dp"/>
                        <TextView
                            android:layout_margin="7dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@color/red_logo"
                            android:text="@string/txt_choose_region"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <Spinner
                            android:id="@+id/spn_region"
                            android:layout_margin="7dp"
                            android:paddingLeft="5dp"
                            android:spinnerMode="dropdown"
                            android:background="@drawable/rounded_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="38dp"/>
                        <TextView
                            android:layout_margin="7dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@color/red_logo"
                            android:text="@string/txt_city"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <Spinner
                            android:id="@+id/spn_city"
                            android:layout_margin="7dp"
                            android:paddingLeft="5dp"
                            android:spinnerMode="dropdown"
                            android:background="@drawable/rounded_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="38dp"/>
                        <TextView
                            android:layout_margin="7dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@color/red_logo"
                            android:text="@string/txt_district"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <Spinner
                            android:id="@+id/spn_district"
                            android:layout_margin="7dp"
                            android:paddingLeft="5dp"
                            android:spinnerMode="dropdown"
                            android:background="@drawable/rounded_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="38dp"/>
                        <TextView
                            android:layout_margin="7dp"
                            android:textSize="18sp"
                            android:text="@string/txt_ward"
                            android:textStyle="bold"
                            android:textColor="@color/red_logo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <EditText
                            android:id="@+id/edt_ward"
                            android:layout_margin="7dp"
                            android:hint="@string/txt_ward"
                            android:paddingLeft="5dp"
                            android:inputType="text"
                            android:maxLines="1"
                            android:background="@drawable/rounded_edittext"
                            android:nextFocusDown="@id/edt_address"
                            android:layout_width="match_parent"
                            android:layout_height="38dp"/>
                        <TextView
                            android:layout_margin="7dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@color/red_logo"
                            android:text="@string/txt_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <EditText
                            android:id="@+id/edt_address"
                            android:hint="@string/txt_address"
                            android:layout_margin="7dp"
                            android:paddingLeft="5dp"
                            android:inputType="text"
                            android:maxLines="1"
                            android:background="@drawable/rounded_edittext"
                            android:nextFocusDown="@id/edt_city"
                            android:layout_width="match_parent"
                            android:layout_height="38dp"/>
                        <TextView
                            android:layout_margin="7dp"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:textColor="@color/red_logo"
                            android:text="@string/txt_enter_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </ScrollView>
                <Button
                    android:id="@+id/btn_add_outlet"
                    android:text="@string/btn_save_info"
                    android:background="@color/red_dark"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>
